<resources>
    <string name="app_name">Journey Diaries</string>
    <string name="journey_from">From</string>
    <string name="journey_to">To</string>
    <string name="journey_name">Name</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="display_map">Display map</string>
    <string name="notes">Notes</string>
    <string name="note">Note</string>
    <string name="add_note">Add note</string>
</resources>
