<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="nvm"
            type="g3.cpe.fr.journeydiaries.models.NoteViewModel"
            />
        <variable
            name="presenter"
            type="g3.cpe.fr.journeydiaries.fragments.AddEditNoteFragment.AddEditNotePresenter"/>
    </data>


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:id="@+id/linearLayout">

        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:layout_conversion_absoluteHeight="62dp"
                tools:layout_conversion_absoluteWidth="374dp"
                android:id="@+id/constraintLayout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="24dp">

            <TextView
                    android:text="@string/note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/labelName"
                    android:labelFor="@id/inputName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_conversion_absoluteHeight="19dp"
                    tools:layout_conversion_absoluteWidth="38dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                tools:layout_conversion_absoluteHeight="62dp"
                tools:layout_conversion_absoluteWidth="374dp"
                android:id="@+id/constraintLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout4">

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/description"
                    android:text="@{nvm.description}"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="374dp"
                android:id="@+id/constraintLayout4"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp">

            <Button
                    android:text="@string/btn_cancel"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_cancel"
                    android:onClick="@{() -> presenter.onAddEdit(nvm.journey)}"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_conversion_absoluteHeight="48dp"
                    android:layout_width="wrap_content"
                    tools:layout_conversion_absoluteWidth="88dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"/>

            <Button
                    android:text="@string/btn_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_delete"
                    app:layout_constraintStart_toEndOf="@+id/btn_cancel"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="88dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"/>

            <Button
                    android:text="@string/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</layout>